<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_nav1_24"
            android:title="@string/nav_label_menu_1" />
        <item
            android:id="@+id/nav_nowplaying"
            android:icon="@drawable/ic_menu_nav2_24"
            android:title="@string/nav_label_menu_2" />
        <item
            android:id="@+id/nav_upcoming"
            android:icon="@drawable/ic_menu_nav3_24"
            android:title="@string/nav_label_menu_3" />
        <item
            android:id="@+id/nav_popular"
            android:icon="@drawable/ic_menu_nav4_24"
            android:title="@string/nav_label_menu_4" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_nav_setting_24"
            android:title="@string/nav_label_menu_5" />
    </group>

    <item android:title="Other">
        <menu>
            <item
                android:id="@+id/nav_aboutUs"
                android:title="@string/nav_label_menu_6" />
            <item
                android:id="@+id/nav_privacyPolicy"
                android:title="@string/nav_label_menu_7" />
        </menu>
    </item>
</menu>
