<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:id="@+id/cl_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing_toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                app:contentScrim="?attr/colorPrimary"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <!-- Header -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorGreySoft3"
                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_collapseMode="parallax">

                    <ImageView
                        android:id="@+id/iv_preview"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/_200sdp"
                        android:background="@drawable/border_img_stories"
                        android:scaleType="centerCrop"
                        app:srcCompat="@mipmap/ic_launcher" />

                </LinearLayout>
                <!-- END Header -->

                <androidx.appcompat.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="?attr/actionBarSize"
                    android:tooltipText="@string/app_name"
                    app:layout_collapseMode="pin"
                    app:layout_scrollFlags="scroll|enterAlways" />

            </com.google.android.material.appbar.CollapsingToolbarLayout>


        </com.google.android.material.appbar.AppBarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nv_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/tv_rate"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:background="@color/colorRed"
                        android:fontFamily="@font/overpass_regular"
                        android:gravity="center_vertical"
                        android:paddingLeft="@dimen/values_regular_"
                        android:paddingTop="@dimen/values_small"
                        android:paddingRight="@dimen/values_regular_"
                        android:paddingBottom="@dimen/values_small"
                        android:text="7.5"
                        android:textColor="@color/colorWhite"
                        android:textSize="@dimen/font_regular" />

                    <TextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/overpass_regular"
                        android:text="@string/app_name"
                        android:textColor="@color/colorTextGrey"
                        android:textSize="@dimen/font_medium" />

                    <TextView
                        android:id="@+id/tv_release_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_title"
                        android:fontFamily="@font/overpass_regular"
                        android:text="@string/app_name"
                        android:textColor="@color/colorTextGrey"
                        android:textSize="@dimen/font_regular" />

                    <TextView
                        android:id="@+id/tv_genre"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_release_date"
                        android:fontFamily="@font/overpass_regular"
                        android:text="@string/app_name"
                        android:textColor="@color/colorTextGrey"
                        android:textSize="@dimen/font_regular" />

                    <RelativeLayout
                        android:id="@+id/rl_detail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_genre"
                        android:layout_marginTop="@dimen/_5sdp">

                        <!-- Status -->
                        <TextView
                            android:id="@+id/tv_status_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/overpass_regular"
                            android:text="@string/tv_label_status"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/font_regular_medium" />

                        <TextView
                            android:id="@+id/tv_status"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_status_label"
                            android:fontFamily="@font/overpass_regular"
                            android:text="@string/tv_label_status"
                            android:textColor="@color/colorTextGrey"
                            android:textSize="@dimen/font_regular" />
                        <!-- [End] Status -->

                        <!-- Runtime -->
                        <TextView
                            android:id="@+id/tv_runtime_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_status"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:fontFamily="@font/overpass_regular"
                            android:text="@string/tv_label_runtime"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/font_regular_medium" />

                        <TextView
                            android:id="@+id/tv_runtime"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_runtime_label"
                            android:fontFamily="@font/overpass_regular"
                            android:text="@string/tv_label_runtime"
                            android:textColor="@color/colorTextGrey"
                            android:textSize="@dimen/font_regular" />
                        <!-- [End] Runtime -->

                        <!-- Languages -->
                        <TextView
                            android:id="@+id/tv_languages_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/_25sdp"
                            android:layout_toRightOf="@+id/tv_runtime_label"
                            android:fontFamily="@font/overpass_regular"
                            android:text="@string/tv_label_spoken_languages"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/font_regular_medium" />

                        <TextView
                            android:id="@+id/tv_languages"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_languages_label"
                            android:layout_marginLeft="@dimen/_25sdp"
                            android:layout_toRightOf="@+id/tv_runtime_label"
                            android:fontFamily="@font/overpass_regular"
                            android:text="@string/tv_label_spoken_languages"
                            android:textColor="@color/colorTextGrey"
                            android:textSize="@dimen/font_regular" />
                        <!-- [End] Languages -->

                        <!-- Languages -->
                        <TextView
                            android:id="@+id/tv_revenue_label"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_languages"
                            android:layout_marginLeft="@dimen/_25sdp"
                            android:layout_marginTop="@dimen/_5sdp"
                            android:layout_toRightOf="@+id/tv_runtime_label"
                            android:fontFamily="@font/overpass_regular"
                            android:text="@string/tv_label_revenue"
                            android:textColor="@color/colorAccent"
                            android:textSize="@dimen/font_regular_medium" />

                        <TextView
                            android:id="@+id/tv_revenue"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/tv_revenue_label"
                            android:layout_marginLeft="@dimen/_25sdp"
                            android:layout_toRightOf="@+id/tv_runtime_label"
                            android:fontFamily="@font/overpass_regular"
                            android:text="@string/tv_label_revenue"
                            android:textColor="@color/colorTextGrey"
                            android:textSize="@dimen/font_regular" />
                        <!-- [End] Languages -->

                    </RelativeLayout>

                    <!-- Overview -->
                    <TextView
                        android:id="@+id/tv_overview_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/rl_detail"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/overpass_regular"
                        android:text="@string/tv_label_overview"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/font_regular_large" />

                    <TextView
                        android:id="@+id/tv_overview"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_overview_label"
                        android:fontFamily="@font/overpass_regular"
                        android:lineSpacingExtra="@dimen/_1sdp"
                        android:text="@string/tv_label_overview"
                        android:textColor="@color/colorTextGrey"
                        android:textSize="@dimen/font_regular" />
                    <!-- [End] Overview -->

                    <!-- Homepage -->
                    <TextView
                        android:id="@+id/tv_hompage_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_overview"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:fontFamily="@font/overpass_regular"
                        android:text="@string/tv_label_homepage"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/font_regular" />

                    <TextView
                        android:id="@+id/tv_homepage"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/tv_hompage_label"
                        android:fontFamily="@font/overpass_regular"
                        android:text="@string/tv_label_homepage"
                        android:textColor="@color/colorTextGrey"
                        android:textSize="@dimen/font_regular" />
                    <!-- [End] Homepage -->
                </RelativeLayout>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>

